--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .history
 .svn/
 
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -29,6 +30,7 @@
 .pub-cache/
 .pub/
 /build/
+/gen/
 
 # Web related
 lib/generated_plugin_registrant.dart
