--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+  provider: ^3.2.0
+  dio:
+  shared_preferences:
+  rxdart: ^0.22.6
+  flutter_spinkit: ^4.0.0
+  badges: ^1.1.1
+  flutter_money_formatter: ^0.8.2
+  carousel_slider: ^1.3.0
+  toast: ^0.1.5
+  numberpicker: ^1.1.0
+  # flutter_html_view: ^0.5.11
+  expandable: ^4.0.2
+  image_cropper: ^1.2.1
+  image_picker: ^0.6.7+4
+  webview_flutter:
+  datetime_picker_formfield:
+  wakelock:
+  cached_network_image:
+  collection:
+  simple_html_css:
+  use_html_t: 1.0.0-pre.2
+  url_launcher:
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,6 +77,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: icomoon
+      fonts:
+        - asset: assets/fonts/IcoMoon.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
