--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,9 +78,12 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: icomoon
+    - family: icielpanton
       fonts:
-        - asset: assets/fonts/IcoMoon.ttf
+        - asset: res/fonts/icielpanton-light.otf
+        - asset: res/fonts/icielpanton-lightitalic.otf
+        - asset: res/fonts/icielpanton-black.otf
+        - asset: res/fonts/icielpanton-blackitalic.otf
   # fonts:
   #   - family: Schyler
   #     fonts:
