--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 *.ipr
 *.iws
 .idea/
+.app
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -71,7 +72,7 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-/pubspec.lock
+.pubspec.lock
 /.flutter-plugins-dependencies
 /android/local.properties
 /*.flutter-plugins-dependencies
