--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 *.ipr
 *.iws
 .idea/
-.app
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -72,7 +71,7 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-.pubspec.lock
+/pubspec.lock
 /.flutter-plugins-dependencies
 /android/local.properties
 /*.flutter-plugins-dependencies
