--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/images/default_avatar/
+    - assets/images/default_Image/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
