--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   provider: ^3.2.0
+  timeago: ^2.0.29
   dio:
   shared_preferences:
   rxdart: ^0.22.6
